# autter-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  INSTALL.md  LICENSE  README-nix.md  README.md  Taskfile.yml  data-privacy.md  flake.nix  install.ps1  install.sh
.github/workflows/: publish-vscode-extension.yml  release.yml
agent-support/amp/: autter.ts
agent-support/intellij/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
agent-support/opencode/: README.md  autter.ts  package-lock.json  package.json
agent-support/pi/: README.md  autter.ts
agent-support/visualstudio/: AutterVS.sln  DESIGN.md  README.md
agent-support/vscode/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
benches/: notes_io.rs
changelog/: correct-exit-codes-for-direct-subcommands.md  no-color-tty-aware-coloring.md  panic-safe-git-proxy.md  unified-arg-global-flag-parsing.md
docs/: notes-backend-spec.md  telemetry-streams-summary.md
docs/migrations/: sessions-v2-note-format.md
scripts/: ai  ci-test-with-retry.ps1  ci-test-with-retry.sh  dev.ps1  dev.sh  fill-install-template.py  repro_runaway_memory.py
scripts/nightly/: start-async-daemon.sh  stop-async-daemon.sh  test-live-agent.sh  test-synthetic-checkpoint.sh  (+3 more)
server/: Cargo.toml  README.md  docker-compose.yml
server/migrations/: 0001_init.sql  0002_cli_audit_log.sql
server/src/: audit.rs  auth.rs  error.rs  main.rs  models.rs  state.rs
server/src/routes/: cas.rs  mod.rs  notes.rs
specs/: autter_standard_v3.0.0.md  runaway-memory-plan.md
src/: config.rs  daemon.rs  diagnostic_sentinels.rs  diagnostics.rs  error.rs  feature_flags.rs  lib.rs  main.rs  telemetry_client.rs  utils.rs  uuid.rs
tests/: async_mode.rs  commit_hunks.rs  commit_tree_update_ref.rs  config_fresh_test.rs  daemon_mode.rs  windows_install_script.rs
(+407 files in other folders)
