[package]
name = "autter-server"
version = "0.1.0"
edition = "2021"
description = "Open-source Autter platform backend: receives authorship notes and prompt (CAS) uploads from the autter CLI and persists them to PostgreSQL."
publish = false

[[bin]]
name = "autter-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "json",
    "macros",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
