[package]
name = "autter-server"
version = "0.1.0"
edition = "2021"
description = "Open-source Autter platform backend: receives authorship notes and prompt (CAS) uploads from the autter CLI and persists them to PostgreSQL."
publish = false

[[bin]]
name = "autter-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "json",
    "macros",
    "migrate",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JWT verification against Better Auth's JWKS (autter.dev is the identity/control plane).
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
